Fix navigation controls wrapping on Notifications page
Fixing regression from a8ef5fe765c1.

Bug: T210487

--- a/modules/styles/mw.echo.ui.PaginationWidget.less
+++ b/modules/styles/mw.echo.ui.PaginationWidget.less
@@ -12,6 +12,10 @@
 		vertical-align: middle;
 	}
 
+	&-direction {
+		white-space: nowrap;
+	}
+
 	&-label {
 		padding: 0 0.5em;
 		white-space: nowrap;
